micro-services/express-js-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-js-service
spec:
  ports:
    - port: 80
      targetPort: 8089
  selector:
    app: expressjs
