micro-services/react-js-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-js-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: reactjs
