micro-services/express-js-service-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: express-js-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: ms.com
    http:
      paths:
      - path: /api/(.+)
        pathType: Prefix
        backend:
          serviceName: express-js-service
          servicePort: 80
