micro-services/react-js-service-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: react-js-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
spec:
  rules:
  - host: ms.com
    http:
      paths:
      - backend: 
          serviceName: react-js-service
          servicePort: 80
